--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body{
 }
 .right >div:first-of-type{
     border-top: 1px solid #c0bfbf;
+    margin-top: 2px;
 }
 .container > .right{
     box-shadow: var(--box-shadow);
@@ -173,6 +174,7 @@ body{
 }
 .progressbar li:first-child::after{
     content: none;
+    
 }
 .progressbar li.active{
     color: green;
@@ -182,4 +184,79 @@ body{
 }
 .progressbar li.active + li::after{
     background-color: green;
+}
+
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow:auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0 ,0.4);
+}
+.modal-content{
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 17%; 
+    
+}
+.close{
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,.close:focus{
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    
+}
+.content-modal{
+    text-align: center;
+    margin-bottom: 20px;
+}
+.modal-container{
+    border-top: 1px solid #ddd;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+}
+.form{
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    border-radius: 25px;
+}
+input[type="text"]{
+    padding: 8px;
+    border-radius: 5px;
+}
+label{
+    font-size: 20px;
+    padding: 3px;
+    margin: 2px;
+}
+.btn-add-order{
+    display: flex;
+    justify-content: center;
+    width: 60px;
+    text-align: center;
+
+    height: 25%;
+    margin-right: 8px;
+    padding: 2px;
+    border-radius: 8px;
+    background: #1b4677;
+    color: aliceblue;
+
+}
+.btn-add-order:hover{
+    background:#2b62a0 ;
 }
